// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <div
    className="o-shell"
  >
    <Component
      className=" test"
      hasButton={true}
      hasShell={true}
      id="section"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
    </Component>
  </div>
</section>
`;

exports[`Section component Should render the Section component without a button 1`] = `
<section
  className="c-section c-section--section"
  id="section"
>
  <div
    className="o-shell o-shell--flex"
  >
    <Component
      hasButton={false}
      hasShell={true}
      id="section"
      shellClass="o-shell--flex"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
    </Component>
  </div>
</section>
`;

exports[`Section component Should render the Section component without a button and a shell 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <Component
    className=" test"
    hasButton={false}
    hasShell={false}
    id="section"
  >
    <p>
      Test
    </p>
    <p>
      Test
    </p>
  </Component>
</section>
`;

exports[`Section component Should render the Section component without a shell 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <Component
    className=" test"
    hasButton={true}
    hasShell={false}
    id="section"
  >
    <p>
      Test
    </p>
    <p>
      Test
    </p>
  </Component>
</section>
`;

exports[`SectionElement component Should render the SectionElements component 1`] = `
<Fragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
  <div
    className="c-section__actions"
  >
    <Component
      className="c-btn"
      href="mailto:hi@atanas.info"
    >
      Hire me
    </Component>
  </div>
</Fragment>
`;

exports[`SectionElement component Should render the SectionElements component without a button 1`] = `
<Fragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
</Fragment>
`;

exports[`SectionElement component Should render the SectionElements component without a button and a shell 1`] = `
<section
  className="c-section c-section--section test"
  id="section"
>
  <Component
    className=" test"
    hasButton={false}
    hasShell={false}
    id="section"
  >
    <p>
      Test
    </p>
    <p>
      Test
    </p>
  </Component>
</section>
`;

exports[`SectionElement component Should render the SectionElements component without a shell 1`] = `
<Fragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
  <div
    className="c-section__actions"
  >
    <Component
      className="c-btn"
      href="mailto:hi@atanas.info"
    >
      Hire me
    </Component>
  </div>
</Fragment>
`;
